--- a/CasusStartToBike/Web.config
+++ b/CasusStartToBike/Web.config
@@ -67,6 +67,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="STBDModel" connectionString="data source=desktop-7e22oc6;initial catalog=StartToBikeDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="STBDContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; initial catalog=StartToBikeDatabase; Integrated Security=True; MultipleActiveResultSets=True; App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
+
