routeplanner eerste setup

--- a/CasusStartToBike/Web.config
+++ b/CasusStartToBike/Web.config
@@ -67,7 +67,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="STBDContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; initial catalog=StartToBikeDatabase; Integrated Security=True; MultipleActiveResultSets=True; App=EntityFramework" providerName="System.Data.SqlClient" />
+	  <add name="STBDContext" connectionString="Server=.;Database=StartToBikeDatabase;Trusted_Connection=True; Pooling=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
 
