--- a/CasusStartToBike/CasusStartToBike.csproj
+++ b/CasusStartToBike/CasusStartToBike.csproj
@@ -144,6 +144,10 @@
     <Compile Include="Migrations\202110181242406_Initial.Designer.cs">
       <DependentUpon>202110181242406_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110211916139_locationchange.cs" />
+    <Compile Include="Migrations\202110211916139_locationchange.Designer.cs">
+      <DependentUpon>202110211916139_locationchange.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Badge.cs" />
@@ -155,6 +159,7 @@
     <Compile Include="Data\STBDContext.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CycleRouteViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Content\bootstrap-theme.css" />
@@ -252,6 +257,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202110181242406_Initial.resx">
       <DependentUpon>202110181242406_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110211916139_locationchange.resx">
+      <DependentUpon>202110211916139_locationchange.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
