--- a/CasusStartToBike/CasusStartToBike.csproj
+++ b/CasusStartToBike/CasusStartToBike.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccessController.cs" />
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\BadgesController.cs" />
     <Compile Include="Controllers\CycleEventsController.cs" />
@@ -139,6 +140,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\CheckAge.cs" />
+    <Compile Include="Helper\CheckAuth.cs" />
     <Compile Include="Migrations\202110252333143_InitialV1.0.cs" />
     <Compile Include="Migrations\202110252333143_InitialV1.0.Designer.cs">
       <DependentUpon>202110252333143_InitialV1.0.cs</DependentUpon>
@@ -160,12 +163,15 @@
     <Compile Include="Models\Badge.cs" />
     <Compile Include="Models\CycleEvent.cs" />
     <Compile Include="Models\CycleRoute.cs" />
+    <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\Follower.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Data\STBDContext.cs" />
     <Compile Include="Models\RouteLocation.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Access\LoginViewModel.cs" />
+    <Compile Include="ViewModels\Access\RegisterViewModel.cs" />
     <Compile Include="ViewModels\CycleRouteViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -254,6 +260,7 @@
     <Content Include="Assets\Scripts\bootstrap.esm.js.map" />
     <Content Include="Assets\Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Assets\Scripts\bootstrap.bundle.js.map" />
+    <Content Include="Views\Access\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
