--- a/CasusStartToBike/CasusStartToBike.csproj
+++ b/CasusStartToBike/CasusStartToBike.csproj
@@ -162,6 +162,10 @@
     <Compile Include="Migrations\202110300927282_Role1.0.Designer.cs">
       <DependentUpon>202110300927282_Role1.0.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111041447055_UI1.0.cs" />
+    <Compile Include="Migrations\202111041447055_UI1.0.Designer.cs">
+      <DependentUpon>202111041447055_UI1.0.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Badge.cs" />
@@ -313,6 +317,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110300927282_Role1.0.resx">
       <DependentUpon>202110300927282_Role1.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111041447055_UI1.0.resx">
+      <DependentUpon>202111041447055_UI1.0.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
